@@ -23,7 +23,8 @@ find -name \*.bb\* | grep .libs | xargs rm -f
 find -name \*.da -o -name \*.gc\* | grep '/.libs/' | xargs -imao -n1 sh -c 'mv mao $(echo mao | sed s,/.libs/,/,g)'
 
 # generate coverage
-geninfo . -o out.info -t 'Test'
+geninfo . -o out0.info -t 'Test'
+perl -ne '$skip = 1 if (m(^SF:/usr/include/sys/)); print if(!$skip); $skip = 0 if (/^end_of_record$/);' < out0.info > out.info
 genhtml out.info -t 'FreeTDS coverage' -o ../coverage
 
 echo Success !!
