@@ -375,21 +375,25 @@ attr SQL_DESC_SCALE 0
 attr SQL_DESC_DISPLAY_SIZE 11
 
 select nchar(12) 'hi!'
-attr SQL_COLUMN_LENGTH 24
+## TODO
+#attr SQL_COLUMN_LENGTH 24
 attr SQL_COLUMN_PRECISION 12
 attr SQL_COLUMN_SCALE 0
 attr SQL_DESC_LENGTH 12
-attr SQL_DESC_OCTET_LENGTH 24
+## TODO
+#attr SQL_DESC_OCTET_LENGTH 24
 attr SQL_DESC_PRECISION 12
 attr SQL_DESC_SCALE 0
 attr SQL_DESC_DISPLAY_SIZE 12
 
 select nvarchar(13) 'hi!'
-attr SQL_COLUMN_LENGTH 26
+## TODO
+#attr SQL_COLUMN_LENGTH 26
 attr SQL_COLUMN_PRECISION 13
 attr SQL_COLUMN_SCALE 0
 attr SQL_DESC_LENGTH 13
-attr SQL_DESC_OCTET_LENGTH 26
+## TODO
+#attr SQL_DESC_OCTET_LENGTH 26
 attr SQL_DESC_PRECISION 13
 attr SQL_DESC_SCALE 0
 attr SQL_DESC_DISPLAY_SIZE 13
@@ -405,11 +409,13 @@ attr SQL_DESC_SCALE 0
 attr SQL_DESC_DISPLAY_SIZE 4096
 
 select ntext 'hi!'
-attr SQL_COLUMN_LENGTH 4096
+## TODO
+#attr SQL_COLUMN_LENGTH 4096
 attr SQL_COLUMN_PRECISION 2048
 attr SQL_COLUMN_SCALE 0
 attr SQL_DESC_LENGTH 2048
-attr SQL_DESC_OCTET_LENGTH 4096
+## TODO
+#attr SQL_DESC_OCTET_LENGTH 4096
 attr SQL_DESC_PRECISION 2048
 attr SQL_DESC_SCALE 0
 attr SQL_DESC_DISPLAY_SIZE 2048
